--- a/bin/TaskExecuter/ChromeExtension/result.html
+++ b/bin/TaskExecuter/ChromeExtension/result.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Task Executer Result</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body style="font-size: 12pt">
 <img src="taskexecuter.png" width="128">
@@ -44,7 +45,12 @@
 </div>
 <hr/>
 <div id="end">
-    <button id="shutdown">Shutdown downloader</button>
+    <div id="shutdown" class="button container">
+        <div class="image">
+            <img src="off.svg"/>
+        </div>
+        <div id="shutdowntext" class="text">Shutdown downloader</div>
+    </div>
 </div>
 <script src="result.js"></script>
 </body>
