updated first chrome extension

--- a/bin/TaskExecuter/ChromeExtension/error.html
+++ b/bin/TaskExecuter/ChromeExtension/error.html
@@ -5,7 +5,7 @@
     <title>Task Executer Error</title>
 </head>
 <body style="font-size: 12pt; color: red;">
-<img src="taskexecuter.png" width="128">
+<img src="taskexecuter-mp3.png" width="128">
 <h1>Task Executer Error</h1>
 <p>Task Executer ist nicht erreichbar!</p>
 </body>
