--- a/bin/TaskExecuter/ChromeExtension/result.html
+++ b/bin/TaskExecuter/ChromeExtension/result.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="font-size: 12pt">
-<img src="taskexecuter.png" width="128">
+<img src="taskexecuter-mp3.png" width="128">
 <h1>Task Executer</h1>
 <h2>
     <div id="url">url</div>
