--- a/bin/TaskExecuter/ChromeExtension2/result.html
+++ b/bin/TaskExecuter/ChromeExtension2/result.html
@@ -43,6 +43,16 @@
     <h2>Programm-Fehler</h2>
     <div id="stderr"></div>
 </div>
+<hr/>
+<div id="end">
+    <div id="close" class="button container curhand">
+        <div class="image">
+            <img src="close.png"/>
+        </div>
+        <div id="closetext" class="text">Schließen</div>
+    </div>
+</div>
+
 <script src="result.js"></script>
 </body>
 </html>
